tests/paczka1/fuzzy1/35022989.err
Error in line 6: DuJQv S684 34,0
Error in line 12: DuJQv A596 97,8
Error in line 10: f75l S684 46,7
Error in line 29: DuJQv S408 82,8
Error in line 25: f75l A596 82,5
